// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component tests it should match snapshot 1`] = `
<div>
  <label
    aria-label="Switch button"
    class="sc-jRQBWg krnHGF"
    data-testid="@Switch/container"
    tabindex="0"
  >
    <input
      checked=""
      data-testid="@Switch/checkbox"
      type="checkbox"
    />
    <span />
  </label>
</div>
`;

exports[`Switch component tests it should match snapshot 2`] = `
<div>
  <label
    aria-label="Switch button"
    class="sc-jRQBWg krnHGF"
    data-testid="@Switch/container"
    tabindex="0"
  >
    <input
      data-testid="@Switch/checkbox"
      type="checkbox"
    />
    <span />
  </label>
</div>
`;
